<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".view.main.personal.PersonalFragment">


    <ImageView
        android:id="@+id/img_apicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/app_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top"
        android:padding="7dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_blue_rect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_apicon">

        <TextView
            android:id="@+id/txt_personel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/securitaspro_regular"
            android:text="@string/personel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/txt_education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:fontFamily="@font/securitaspro_regular"
            android:text="@string/education"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cl_top"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textSize="16sp"
                    android:text="@string/first_name"
                    android:textColor="@color/textColor"/>

                <EditText
                    android:id="@+id/edt_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="11dp"
                    android:gravity="start"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textColor="@color/textColorSoft"
                    android:background="@drawable/bg_edt"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="17dp"
                app:layout_constraintTop_toBottomOf="@id/ll_fname">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textSize="16sp"
                    android:text="@string/last_name"
                    android:textColor="@color/textColor"/>

                <EditText
                    android:id="@+id/edt_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="11dp"
                    android:gravity="start"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textColor="@color/textColorSoft"
                    android:background="@drawable/bg_edt"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_profession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="17dp"
                app:layout_constraintTop_toBottomOf="@id/ll_lname">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textSize="16sp"
                    android:text="@string/profession"
                    android:textColor="@color/textColor"/>

                <EditText
                    android:id="@+id/edt_profession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="11dp"
                    android:gravity="start"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textColor="@color/textColorSoft"
                    android:background="@drawable/bg_edt"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="17dp"
                app:layout_constraintTop_toBottomOf="@id/ll_profession">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textSize="16sp"
                    android:text="City"
                    android:textColor="@color/textColor"/>

                <EditText
                    android:id="@+id/edt_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="11dp"
                    android:gravity="start"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textColor="@color/textColorSoft"
                    android:background="@drawable/bg_edt"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="17dp"
                app:layout_constraintTop_toBottomOf="@id/ll_city">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textSize="16sp"
                    android:text="@string/state_province"
                    android:textColor="@color/textColor"/>

                <EditText
                    android:id="@+id/edt_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="11dp"
                    android:gravity="start"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textColor="@color/textColorSoft"
                    android:background="@drawable/bg_edt"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="17dp"
                app:layout_constraintTop_toBottomOf="@id/ll_state">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textSize="16sp"
                    android:text="@string/zip_code"
                    android:textColor="@color/textColor"/>

                <EditText
                    android:id="@+id/edt_zipcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="11dp"
                    android:gravity="start"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textColor="@color/textColorSoft"
                    android:background="@drawable/bg_edt"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="17dp"
                app:layout_constraintTop_toBottomOf="@id/ll_zipcode">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textSize="16sp"
                    android:text="@string/phone"
                    android:textColor="@color/textColor"/>

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="11dp"
                    android:gravity="start"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textColor="@color/textColorSoft"
                    android:background="@drawable/bg_edt"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="17dp"
                app:layout_constraintTop_toBottomOf="@id/ll_phone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textSize="16sp"
                    android:text="@string/email_address"
                    android:textColor="@color/textColor"/>

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="11dp"
                    android:gravity="start"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textColor="@color/textColorSoft"
                    android:background="@drawable/bg_edt"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="17dp"
                app:layout_constraintTop_toBottomOf="@id/ll_email">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textSize="16sp"
                    android:text="@string/languages"
                    android:textColor="@color/textColor"/>

                <EditText
                    android:id="@+id/edt_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="11dp"
                    android:gravity="start"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textColor="@color/textColorSoft"
                    android:background="@drawable/bg_edt"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textSize="16sp"
                    android:text="@string/add_another"
                    android:textColor="@color/blue_bg"
                    android:layout_marginTop="11dp"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="17dp"
                app:layout_constraintTop_toBottomOf="@id/ll_language">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textSize="16sp"
                    android:text="Photo"
                    android:textColor="@color/textColor"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/securitaspro_regular"
                    android:textSize="16sp"
                    android:text="+ ADD"
                    android:textColor="@color/blue_bg"
                    android:layout_marginTop="11dp"/>

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:background="@drawable/bg_rounded_blue_btn"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/securitaspro_bold"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible"
                android:layout_margin="30dp"
                app:layout_constraintTop_toBottomOf="@id/ll_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@id/btn_save"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>